kivy_carousel.py and GUI_kivy.py up to date

--- a/dicecarousel.kv
+++ b/dicecarousel.kv
@@ -8,18 +8,16 @@
         size_hint_x: None
         width: 100
         Label:
-            
+
             id:hor_title
             font_size:15
         Slider:
-            #size_hint_x: None
-            #width: 20
             id:hor_slider
             orientation:'horizontal'
             min:0
             max:10
             value:1
-            step:1 
+            step:1
         Label:
             text: str(int(hor_slider.value))
             font_size:10
@@ -29,10 +27,21 @@
     text:'record\nweights'
     size_hint:None, None
     size: 100, 50
+<WeightsPopup>:
+    size_hint: None, None
+    title: 'using weighted dice? for shame! cheater!'
+    ScrollView:
+        id:scroll_shell
+        scroll_timeout:70
+        StackLayout:
+            id: contents
+            orientation: 'tb-lr'
+            size_hint: None, None
+            spacing: 10
+            padding: 10
+            size:1000, 1000
+
 <PageBox>:
-    #size_hint_x:None
-    #width:200
-    #cols:1
     id:all_rolls
     orientation:'vertical'
     Label:
@@ -67,8 +76,7 @@
             size_hint: 0.25, 1
             input_filter:'int'
             multiline:False
-            #text: str(root.current_page + 1)
-            on_text_validate:lambda: root.text_check(jump_to.text)
+            on_text_validate: root.text_check(jump_to.text)
             border: 1,3,1,3
             padding_y: 1,1
             font_size: (lambda:min(int(0.7 * self.height), int(0.35 * self.width)))()
@@ -98,17 +106,8 @@
                 size: self.size
         id:text_container
         size_hint: 1, 0.8
-        #height:600
         text:''
         text_size: self.width, self.height
-
-<WeightPopupContents>:
-    height: min(main().height, contents.height)
-    width: min(main().width, contents.width)
-    StackLayout:
-        id: slider_container
-        orientation: 'tb-lr'
-        size_hint: None, None
 
 <AddRmDice>:
     orientation:'horizontal'
@@ -117,8 +116,8 @@
 
 #big boxes
 <ChangeBox>:
- 
- 
+
+
 <AddBox>:
     id:bob
     orientation:'vertical'
@@ -141,13 +140,13 @@
             size_hint: 0.5, 1
             Label:
                 size_hint: 1, None
-                
-                text: 'type custom die size from 2-200 and press enter'
-                
-                font_size: 15
+
+                text: 'type custom die size from 2-200'
+
+                font_size: 18
                 height: custom_size.height - custom_input.height
                 text_size: self.size
-                
+
             TextInput:
                 id:custom_input
                 size_hint: 1, None
@@ -155,7 +154,7 @@
                 input_filter:'int'
                 multiline:False
                 font_size: 20
-                on_text: root.assign_size_text() 
+                on_text: root.assign_size_text()
                 border: 1,3,1,3
                 padding_y: 1,1
         Button:
@@ -166,6 +165,7 @@
             font_size: 20
             halign: 'center'
             valign: 'middle'
+            on_press: root.add_weights()
     BoxLayout:
         id: size_mod
         orientation: 'horizontal'
@@ -198,7 +198,7 @@
                     step:1
                     on_value:root.assign_mod()
                     size_hint: 0.75, 1
-                    canvas: 
+                    canvas:
                         Color:
                             rgba:1,0,0,0.5
                         Rectangle:
@@ -206,11 +206,11 @@
                             pos:self.pos
     BoxLayout:
         id: add_it
-        size_hint:1, 0.25     
+        size_hint:1, 0.25
 
 
-        
-        
+
+
 <InfoBox>:
     orientation:'vertical'
     padding:10
@@ -225,7 +225,7 @@
         Label:
             id:dice_table_str
             text: 500*'adfgdg\n'
-            size_hint: 1, None 
+            size_hint: 1, None
             text_size: self.width, None
             height: dice_table_str.texture_size[1]
             halign: 'center'
@@ -249,7 +249,7 @@
         id: overlay_graph
         size: self.texture_size
         text: 'overlay\ngraph'
-        on_press: app.root.request_graph()        
+        on_press: app.root.request_graph()
     Button:
         id: clear
         size: self.texture_size
@@ -267,7 +267,6 @@
                 text:'value 1'
                 #size: self.texture_size
                 size_hint:0.25, 0.03
-                #size_hint_y: 0.03
             Label:
                 size_hint:0.25, 0.03
             Label:
@@ -281,10 +280,8 @@
                 id:start_show
                 text: str(int(start_slider.value))
                 size_hint_y:0.8
-                #height:200
                 font_size:15
                 size_hint:0.25, 0.82
-                #size_hint_y: 0.82
             Slider:
                 id:start_slider
                 orientation:'vertical'
@@ -294,13 +291,11 @@
                 step:1
                 size_hint:0.25, 0.82
                 on_value:root.show_stats()
-                #on_touch_move:root.show_stats()
-                #on_touch_up:root.show_stats()
             Label:
                 id:stop_show
                 text: str(int(stop_slider.value))
                 font_size:15
-                size_hint:0.25, 0.82    
+                size_hint:0.25, 0.82
             Slider:
                 id:stop_slider
                 orientation:'vertical'
@@ -309,16 +304,10 @@
                 value:1
                 step:1
                 on_value:root.show_stats()
-                #on_touch_move:root.show_stats()
-                #on_touch_up:root.show_stats()
                 size_hint:0.25, 0.82
             #thrid row text input
             Label:
-                #size: self.texture_size
                 text:'or type\nhere'
-                #size_hint_y: 0.15
-                #size_hint_y:None
-                #height:30
                 size_hint:0.25, 0.15
             TextInput:
                 id:start_slider_text
@@ -337,12 +326,11 @@
                 input_filter:'int'
                 multiline:False
                 text: str(int(stop_slider.value))
-                on_text_validate:root.assign_text_value(box='stop')            
+                on_text_validate:root.assign_text_value(box='stop')
                 size_hint:0.25, 0.15
                 border: 1,3,1,3
                 padding_y:1,1
                 font_size:(lambda:min(int(0.7 * self.height), int(0.3 * self.width)))()
-                #line_height:self.font_size
         Label:
             id:stat_text
             text:'no stats'
@@ -350,22 +338,11 @@
             size: self.texture_size
             size_hint: 1, 0.6
             valign:'top'
-            
-#<AllRollsBox>:
-#    PageBox:
-#        id:all_rolls
-#        size_hint: 1, 1
+
+
 
 #parent
 <DicePlatform>:
 
 
 
-
-
-#tools
-
-
-    
-
-    
