--- a/dicetable.kv
+++ b/dicetable.kv
@@ -26,7 +26,7 @@
 <WeightIt>:
     text:'record\nweights'
     size_hint:None, None
-    size: 100, 50
+    size: 100, 50          
 <WeightsPopup>:
     size_hint: None, None
     title: 'using weighted dice? for shame! cheater!'
@@ -40,6 +40,50 @@
             spacing: 10
             padding: 10
             size:1000, 1000
+
+<PlotPopup>:
+    title: 'click the legend button for legend.  click on a label to highlight that plot.'
+    ScatterLayout:
+        id: graph_container
+        do_rotation: False
+        Graph:
+            id: graph
+            xlabel: 'the rolls'
+            ylabel: 'percent chance'
+            y_grid_label: True
+            x_grid_label: True
+            x_grid: True
+            y_grid: True
+            x_ticks_major: 2
+            y_ticks_major: 1
+        Button:
+            text:'done'
+            size_hint: 0.1, 0.1
+            on_press: root.dismiss()
+        Button:
+            id: legend
+            text:'legend'
+            size_hint: None, 0.1
+            width: 50
+            pos_hint: {'x': 0, 'y': 0.9}
+            
+        
+            
+            
+<PlotCheckBox>:
+    orientation: 'horizontal'
+    CheckBox:
+        id: check_box
+        size_hint: 0.1, 0.5
+        active: root.active
+    ScrollView:
+        id:scroller
+        size_hint: 0.9, 1
+        Label:
+            id:label
+            text: root.text
+            size_hint: None, 1
+            width: self.texture_size[0]
 
 <PageBox>:
     id:all_rolls
@@ -121,14 +165,6 @@
 <AddBox>:
     id:bob
     orientation:'vertical'
-    Label:
-        id: drag
-        size_hint:1, 0.05
-        text: '<====DRAG====>'
-        font_size: 20
-        text_size: self.size
-        halign: 'center'
-        color: 1, 0.2,0.2,1
     BoxLayout:
         id: custom
         size_hint:1, 0.3
@@ -140,9 +176,7 @@
             size_hint: 0.5, 1
             Label:
                 size_hint: 1, None
-
                 text: 'type custom die size from 2-200'
-
                 font_size: 18
                 height: custom_size.height - custom_input.height
                 text_size: self.size
@@ -208,9 +242,6 @@
         id: add_it
         size_hint:1, 0.25
 
-
-
-
 <InfoBox>:
     orientation:'vertical'
     padding:10
@@ -234,28 +265,44 @@
         size_hint: 1, 0.6
 
 <GraphBox>:
-    padding: 20
-    spacing: 10
-    Button:
-        id: one_off_graph_stuff
-        text: 'one - off graph'
-        text_size: self.size
-        size: self.texture_size
-        halign: 'center'
-        valign: 'middle'
-        on_press: app.root.request_graph(new=True)
-    Label:
-    Button:
-        id: overlay_graph
-        size: self.texture_size
-        text: 'overlay\ngraph'
-        on_press: app.root.request_graph()
-    Button:
-        id: clear
-        size: self.texture_size
-        text: 'clear\noverlay'
-        on_press: app.root.request_clear_graph()
-
+    #padding: 20
+    #spacing: 10
+    orientation: 'vertical'
+    BoxLayout:
+        id: graph_space
+        orientation: 'vertical'
+        size_hint: 1, 0.9
+            #Label:
+            #CheckLabel:
+    BoxLayout:
+        size_hint: 1, 0.1
+        Button:
+            id: graph_stuff
+            text: 'graph it'
+            text_size: self.size
+            size: self.texture_size
+            size_hint: 0.33, 1
+            halign: 'center'
+            valign: 'middle'
+            on_press: root.graph_it()
+        Button:
+            id: clear_all
+            text: 'clear history'
+            text_size: self.size
+            size: self.texture_size
+            size_hint: 0.33, 1
+            halign: 'center'
+            valign: 'middle'
+            on_press: root.clear_all()    
+        Button:
+            id: clear_selected
+            text: 'clear selected'
+            text_size: self.size
+            size: self.texture_size
+            size_hint: 0.33, 1
+            halign: 'center'
+            valign: 'middle'
+            on_press: root.clear_selected()
 <StatBox>:
     BoxLayout:
         orientation: 'vertical'
@@ -264,14 +311,13 @@
             size_hint: 1, 0.4
             #top row - value1 value2
             Label:
-                text:'value 1'
-                #size: self.texture_size
+                text:'\nvalue 1'
                 size_hint:0.25, 0.03
             Label:
                 size_hint:0.25, 0.03
             Label:
                 size_hint:0.25, 0.03
-                text:'value 2'
+                text:'\nvalue 2'
                 #size: self.text
             Label:
                 size_hint:0.25, 0.03
@@ -338,28 +384,33 @@
             size: self.texture_size
             size_hint: 1, 0.6
             valign:'top'
+
+
+
 #parent
 <DicePlatform>:
-    #size_hint:None, None
-    #width:100
-    #height:15000
-    orientation:'horizontal'
-    #Button:
-    #    on_press:root.do_it()
-    #    text:'do'
-    #    size_hint:0.1, 1
-    #BoxLayout:
-    #    size_hint:0.4, 1
-    #    id:graph_stat
-    #    orientation:'vertical'
-
-
-
-
-
-#tools
-
-
-
+    orientation: 'horizontal'
+    ChangeBox:
+        size_hint: 0.2, 1
+        id: change_box
+    AddBox:
+        size_hint: 0.2, 1
+        id: add_box
+    StatBox:
+        size_hint: 0.2, 1
+        id: stat_box
+    GraphBox:
+        size_hint: 0.2, 1
+        id: graph_box
+    BoxLayout:
+        size_hint: 0.2, 1
+        id: all_rolls_info
+        orientation: 'horizontal'
+        AllRollsBox:
+            id: all_rolls_box
+        InfoBox:
+            id: info_box
+            
+    
 
 
